--- a/src/components/Home/Home/Home.css
+++ b/src/components/Home/Home/Home.css
@@ -29,3 +29,27 @@
     color: black;
     background-color: grey;
 }
+
+@media screen and (max-width: 600px){
+    .search-input {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .search-input {
+        width: 40%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .search-input {
+        width: 30%;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .search-input {
+        width: 20%;
+    }
+}
